--- a/frontend/style.css
+++ b/frontend/style.css
@@ -36,7 +36,7 @@ p{
   text-align:center;
 }
 
-.first-photo-container{
+.photo-container{
   padding-top:16px;
   padding-bottom:16px;
   margin: 0 3%;
@@ -56,6 +56,6 @@ p{
   width: 100%;
 }
 
-.rating{
+#new-review{
   padding: 5px 0
 }
