--- a/frontend/style.css
+++ b/frontend/style.css
@@ -30,36 +30,43 @@ p{
  margin: 8px;
 }
 
-img{
-  width: 25%;
-  height: 25%;
-  padding:4px;
+.container {
+	max-width: 1100px;
+	margin: 0 auto;
+}
+
+
+section{
+  background: white;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  /* flex-flow: row wrap; */
+  justify-content: space-between;
+  /* justify-content: space-around; */
+  }
+
+.book-container{
+  box-sizing: border-box;
+  flex-basis: 25%
+}
+
+.book-info {
+  padding: 3px 20px;
+}
+img {
+  max-width: 100%;
+  height: 360px
+}
+img:hover{
+  opacity: .5;
+  transition: .9s;
 }
 
 .top-header {
   padding-top:16px;
   padding-bottom:16px;
   text-align:center;
-}
-
-.photo-container{
-  padding-top:16px;
-  padding-bottom:16px;
-  margin: 0 3%;
-  text-align:center
-}
-
-.quarter-container{
-  float: left;
-  max-width: 385px;
-  min-width: 360px;
-  height: 360px;
-  padding:4px 10px;
-}
-
-.image{
-  height: 185px;
-  width: 100%;
 }
 
 #new-review{
