--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,74 +1,119 @@
 body{font-family: 'Montserrat', sans-serif;}
 h1,h2,h3,h4,h5,h6 {font-family: 'Work Sans', sans-serif;}
 
-h1{
-  font-size: 40px;
+/* TOP HEADER */
+
+#header-image{
+    width: 80%;
+    height: 30%;
+    /* width: 1300px; */
+    /* height: 380px; */
+    overflow: hidden;
 }
 
-h2{
-  min-height: 75px;
-  vertical-align: middle;
-}
-
-h3{
-  font-size: 18px;
-  margin: 8px;
-  text-align: left;
-}
-
-h4{
-    font-size: 12px;
-    margin: 0;
-    font-style: normal;
-    font-weight: lighter;
-    color: red;
-}
-
-p{
- font-size: 14px;
- text-align: left;
- margin: 8px;
-}
-
-.container {
-	max-width: 1100px;
-	margin: 0 auto;
-}
-
-
-section{
-  background: white;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  /* flex-flow: row wrap; */
-  justify-content: space-between;
-  /* justify-content: space-around; */
-  }
-
-.book-container{
-  box-sizing: border-box;
-  flex-basis: 25%
-}
-
-.book-info {
-  padding: 3px 20px;
-}
-img {
-  max-width: 100%;
-  height: 360px
-}
-img:hover{
-  opacity: .5;
-  transition: .9s;
-}
-
-.top-header {
+#top-header {
+  position: relative;
   padding-top:16px;
   padding-bottom:16px;
   text-align:center;
+
 }
 
-#new-review{
-  padding: 5px 0
+#txt-inside-img{
+  /* font-size: 40px; */
+  position: absolute;
+  left: 30%;
+  top: 50%;
+  transform: translate( -50% );
+
 }
+
+/* BOOKS CONTAINER  */
+
+section{
+  max-width: 1100px;
+  margin: 16px auto;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.book-container{
+  box-sizing: border-box;
+  width: 250px;
+  height: 800px;
+}
+
+button:hover{
+  opacity: .5;
+  transition: .9s;
+  color: grey;
+}
+
+img {
+  width: 100%;
+  height: 360px;
+}
+
+.book-info {
+  width: 250px;
+  height: 100px;
+  margin-top: 12px;
+  margin-bottom: 16px
+}
+
+  .book-title{
+    font-size: 18px;
+    padding-bottom: 8px;
+    margin: 0px;
+    text-align: left;
+  }
+
+  .book-author{
+    font-size: 12px;
+    margin: 0px;
+    text-align: left;
+    font-weight: lighter;
+  }
+
+/* ADD BOOK REVIEWS STYLE */
+.review-info{
+  width: 250px;
+  height: 266px;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  padding-top: 12px
+}
+
+.review-header{
+  font-size: 16px;
+  padding-bottom: 8px;
+  margin: 0px;
+  text-align: left;
+}
+
+  p{
+   font-size: 14px;
+   text-align: left;
+   /* margin: 8px; */
+  }
+
+  /* NEW BOOK CONTAINER */
+
+  #new-book-container{
+    max-width: 1100px;
+    margin: auto;
+    margin-bottom: 50px;
+    margin-top: 50px;
+    padding-bottom:16px;
+    text-align:center;
+    background-color: light-grey;
+  }
+
+  h2{
+    min-height: 50px;
+    margin-bottom: 0px;
+    vertical-align: middle;
+  }
